--- a/packages/router/package.json
+++ b/packages/router/package.json
@@ -28,6 +28,7 @@
     "test:classic": "CLASSIC=true ember test --test-port=0"
   },
   "dependencies": {
+    "@ember/test-waiters": "^2.3.2",
     "@embroider/macros": "0.28.0",
     "ember-cli-babel": "^7.23.0"
   },
